--- a/aboutus.html
+++ b/aboutus.html
@@ -20,10 +20,33 @@ href="node_modules/bootstrap/dist/css/bootstrap.min.css"
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <title>Ristorante Con Fusion: About Us</title>
+<ol class="col-12 breadcrumb">
+    <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+    <li class="breadcrumb-item active">About Us</li>  
+    </ol>
 </head>
 
 <body>
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
 
+                <span class="navbar-toggler-icon"></span>
+                
+            </button>
+            
+          <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+          <div class="collapse navbar-collapse" id="Navbar">
+
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item active"><a class="nav-link" href="./aboutus.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          </ul>
+        </div>
+        </div>
+    </nav>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -46,7 +69,7 @@ href="node_modules/bootstrap/dist/css/bootstrap.min.css"
         </div>
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-5 order-sm-last col-md-6">
+            <div class="col-12 col-sm-6 order-sm-last col-md-6">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
