--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         <div class="col-12 col-sm align-self-center">
           <img src="img/logo.png" class="img-fluid">
         </div>
+        <div class=" col-12 col-sm-3 align-self-center">
+          <button onclick="document.getElementById('forms').scrollIntoView()" id="button1" class=" btn-width border-0 bg-warning py-2 rounded "> <h5 class="align-middle text-margin">Reserve Table</h5></button>
+        </div>
+        
       </div>
     </div>
   </header>
@@ -70,7 +74,8 @@
         <div class="media">
           <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
           <div class="media-body">
-            <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+            <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span
+                class="badge badge-pill badge-secondary">$4.99</span></h2>
             <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
               Italian pizza, topped with Cerignola olives, ripe vine
               cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -85,15 +90,21 @@
         <h3>This Month's Promotions</h3>
       </div>
       <div class="col col-sm col-md">
-        <h2>Weekend Grand Buffet</h2>
-        <p>
-          Featuring mouthwatering combinations with a choice of five different
-          salads, six enticing appetizers, six main entrees and five choicest
-          desserts. Free flowing bubbly and soft drinks. All for just $19.99
-          per person
-        </p>
+        <div class="media">
+          <div class="media-body">
+            <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+            <p class="d-none d-sm-block">
+              Featuring mouthwatering combinations with a choice of five different
+              salads, six enticing appetizers, six main entrees and five choicest
+              desserts. Free flowing bubbly and soft drinks. All for just $19.99
+              per person
+            </p>
+          </div>
+          <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+        </div>
       </div>
     </div>
+
 
     <div class="row row-content align-items-center">
       <div class="col-12 col-sm-4 order-sm-last col-md-3">
@@ -114,6 +125,48 @@
         </div>
       </div>
     </div>
+
+    <div class="col-12 col-sm-8 mx-auto designform" id="forms">
+      <div class="card">
+        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+        <div class="card-body">
+          <div class="col-12 col-md">
+            <form>
+              <div class="form-group row">
+                <label for="numberOfGuest" class="col-md-2 col-form-label">Number of Guests</label>
+
+                <div class="col-12 col-md-10">
+                  <input type="radio" id="1" name="number"><label class="ml-1 mr-2" for="1">1</label>
+                  <input type="radio" id="2" name="number"><label class="ml-1 mr-2" for="2">2</label>
+                  <input type="radio" id="3" name="number"><label class="ml-1 mr-2" for="3">3</label>
+                  <input type="radio" id="4" name="number"><label class="ml-1 mr-2" for="4">4</label>
+                  <input type="radio" id="5" name="number"><label class="ml-1 mr-2" for="5">5</label>
+                  <input type="radio" id="6" name="number"><label class="ml-1 mr-2" for="6">6</label>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <label for="dateTime" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                <div class="col-6 col-md-4">
+                  <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                </div>
+                <div class="col-6 col-md-4">
+                  <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="offset-md-2 col-md-10">
+                  <button type="submit" class="btn btn-primary">Reserve</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
   <footer class="footer">
