--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./css/style.css">
-  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
 
   <title>Ristorante Con Fusion</title>
 </head>
@@ -40,9 +39,51 @@
           <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span>
               Contact</a></li>
         </ul>
+        <span class="navbar-text">
+          <a data-toggle="modal" data-target="#loginModal">
+            <span class="fa fa-sign-in"></span> Login</a>
+        </span>
       </div>
     </div>
   </nav>
+  <div id="loginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Login </h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-row">
+              <div class="form-group col-sm-4">
+                <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                  placeholder="Enter email">
+              </div>
+              <div class="form-group col-sm-4">
+                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3"
+                  placeholder="Password">
+              </div>
+              <div class="col-sm-auto">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox">
+                  <label class="form-check-label"> Remember me
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+              <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <header class="jumbotron">
     <div class="container">
       <div class="row row-header">
@@ -58,14 +99,165 @@
           <img src="img/logo.png" class="img-fluid">
         </div>
         <div class=" col-12 col-sm-3 align-self-center">
-          <button onclick="document.getElementById('forms').scrollIntoView()" id="button1" class=" btn-width border-0 bg-warning py-2 rounded "> <h5 class="align-middle text-margin">Reserve Table</h5></button>
+          <a role="button" class="btn btn-block nav-link btn-warning" data-target="#reserveTable" data-toggle="modal"
+            data-hover="toolflip" data-placement="" html="true" title="Or Call us at +852 12345678"
+            data-placement="bottom" href="#reserveform">Reserve
+            Table</a>
         </div>
         
-      </div>
-    </div>
   </header>
 
+  <div id="reserveTable" class="modal fade" role="dialog">
+          <div class="modal-dialog modal-lg" role="content">
+            <div class="row justify-content-center">
+              <form class="modal-content border rounded" style="overflow: hidden">
+                <div class="bg-white border-bottom d-flex">
+                  <h3 class="p-2">Reserver a Table</h3>
+                  <div class="d-inline-block p-2 ml-auto">
+                    <a role="button" class="btn" data-toggle="modal" data-target="#reserveform">
+                      <i class="fa-solid fa-xmark"></i>
+                    </a>
+                  </div>
+                </div>
+                <div class="row p-2">
+                  <div class="col-md-2 col-sm-12">Number of Guest</div>
+                  <div class="form-group col-md-8">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                        value="option" />
+                      <label class="form-check-label" for="inlineRadio3">1</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                        value="option" />
+                      <label class="form-check-label" for="inlineRadio3">2</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                        value="option" />
+                      <label class="form-check-label" for="inlineRadio3">3</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
+                        value="option" />
+                      <label class="form-check-label" for="inlineRadio3">4</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5"
+                        value="option" />
+                      <label class="form-check-label" for="inlineRadio3">5</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6"
+                        value="option" />
+                      <label class="form-check-label" for="inlineRadio3">6</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row p-2">
+                  <div class="col-md-2 col-sm-12">Section</div>
+                  <div class="form-group col-md-8">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                      <label class="btn btn-success active">
+                        <input type="radio" name="options" id="option1" autocomplete="off" checked />Non Smoking
+                      </label>
+                      <label class="btn btn-danger">
+                        <input type="radio" name="options" id="option2" autocomplete="off" />
+                        Smoking
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="row p-2">
+                    <p class="col-sm-12 col-md-2">Date and Time</p>
+                    <div class="col-sm-12 col-md-3">
+                      <input type="text" class="form-control" placeholder="Date" />
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                      <input type="text" class="form-control" placeholder="Time" />
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="row p-2">
+                    <div class="col offset-md-2">
+                      <button type="button" class="btn btn-secondary">
+                        <a role="button" data-toggle="modal" data-dismiss="modal">
+                          Cancel
+                        </a>
+                      </button>
+                      <button type="button" class="btn btn-primary">Resever</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
   <div class="container">
+    <div class="row row-content">
+      <div class="col">
+        <div id="mycarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+              <div class="carousel-caption d-none d-md-block">
+                <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span
+                    class="badge badge-pill badge-secondary">$4.99</span></h2>
+                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                  Italian pizza, topped with Cerignola olives, ripe vine
+                  cherry tomatoes, Vidalia onion, Guntur chillies and
+                  Buffalo Paneer.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                <p class="d-none d-sm-block">
+                  Featuring mouthwatering combinations with a choice of five different
+                  salads, six enticing appetizers, six main entrees and five choicest
+                  desserts. Free flowing bubbly and soft drinks. All for just $19.99
+                  per person
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto Somayya">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>Alberto Somayya</h2>
+                <h4>Executive Chef</h4>
+                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                  International experience having worked closely with
+                  whos-who in the culinary world, he specializes in
+                  creating mouthwatering Indo-Italian fusion experiences.
+                </p>
+              </div>
+            </div>
+          </div>
+          <ol class="carousel-indicators">
+            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#mycarousel" data-slide-to="1"></li>
+            <li data-target="#mycarousel" data-slide-to="2"></li>
+          </ol>
+          <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+          <div class="btn-group" id="carouselButton">
+            <button class="btn btn-danger btn-sm" id="carouselButton">
+              <span id="carousel-button-icon" class="fa fa-pause"></span>
+            </button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
     <div class="row row-content align-items-center">
       <div class="col-12 col-sm-4 order-sm-last col-md-3">
         <h3>Our Lipsmacking Culinary Creations</h3>
@@ -219,6 +411,32 @@
       </div>
     </div>
   </footer>
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
+  <script>
+    $(document).ready(function () {
+      $("#mycarousel").carousel({ interval: 2000 });
+      $("#carouselButton").click(function () {
+        if ($("#carouselButton").children("button").children("span").hasClass('fa-pause')) {
+          $("#mycarousel").carousel('pause');
+          $("#carouselButton").children("button").children("span").removeClass('fa-pause');
+          $("#carouselButton").children("button").children("span").addClass('fa-play');
+        }
+        else if ($("#carouselButton").children("button").children("span").hasClass('fa-play')) {
+          $("#mycarousel").carousel('cycle');
+          $("#carouselButton").children("button").children("span").removeClass('fa-play');
+          $("#carouselButton").children("button").children("span").addClass('fa-pause');
+        }
+      });
+    });
+  </script>
+
 </body>
 
 </html>
