--- a/index.html
+++ b/index.html
@@ -104,97 +104,97 @@
             data-placement="bottom" href="#reserveform">Reserve
             Table</a>
         </div>
-        
+
   </header>
 
   <div id="reserveTable" class="modal fade" role="dialog">
-          <div class="modal-dialog modal-lg" role="content">
-            <div class="row justify-content-center">
-              <form class="modal-content border rounded" style="overflow: hidden">
-                <div class="bg-white border-bottom d-flex">
-                  <h3 class="p-2">Reserver a Table</h3>
-                  <div class="d-inline-block p-2 ml-auto">
-                    <a role="button" class="btn" data-toggle="modal" data-target="#reserveform">
-                      <i class="fa-solid fa-xmark"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="row p-2">
-                  <div class="col-md-2 col-sm-12">Number of Guest</div>
-                  <div class="form-group col-md-8">
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                        value="option" />
-                      <label class="form-check-label" for="inlineRadio3">1</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                        value="option" />
-                      <label class="form-check-label" for="inlineRadio3">2</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
-                        value="option" />
-                      <label class="form-check-label" for="inlineRadio3">3</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
-                        value="option" />
-                      <label class="form-check-label" for="inlineRadio3">4</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5"
-                        value="option" />
-                      <label class="form-check-label" for="inlineRadio3">5</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6"
-                        value="option" />
-                      <label class="form-check-label" for="inlineRadio3">6</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="row p-2">
-                  <div class="col-md-2 col-sm-12">Section</div>
-                  <div class="form-group col-md-8">
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                      <label class="btn btn-success active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked />Non Smoking
-                      </label>
-                      <label class="btn btn-danger">
-                        <input type="radio" name="options" id="option2" autocomplete="off" />
-                        Smoking
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="row p-2">
-                    <p class="col-sm-12 col-md-2">Date and Time</p>
-                    <div class="col-sm-12 col-md-3">
-                      <input type="text" class="form-control" placeholder="Date" />
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                      <input type="text" class="form-control" placeholder="Time" />
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="row p-2">
-                    <div class="col offset-md-2">
-                      <button type="button" class="btn btn-secondary">
-                        <a role="button" data-toggle="modal" data-dismiss="modal">
-                          Cancel
-                        </a>
-                      </button>
-                      <button type="button" class="btn btn-primary">Resever</button>
-                    </div>
-                  </div>
-                </div>
-              </form>
+    <div class="modal-dialog modal-lg" role="content">
+      <div class="row justify-content-center">
+        <form class="modal-content border rounded" style="overflow: hidden">
+          <div class="bg-white border-bottom d-flex">
+            <h3 class="p-2">Reserver a Table</h3>
+            <div class="d-inline-block p-2 ml-auto">
+              <a role="button" class="btn" data-toggle="modal" data-target="#reserveform">
+                <i class="fa-solid fa-xmark"></i>
+              </a>
             </div>
           </div>
-        </div>
+          <div class="row p-2">
+            <div class="col-md-2 col-sm-12">Number of Guest</div>
+            <div class="form-group col-md-8">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                  value="option" />
+                <label class="form-check-label" for="inlineRadio3">1</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                  value="option" />
+                <label class="form-check-label" for="inlineRadio3">2</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                  value="option" />
+                <label class="form-check-label" for="inlineRadio3">3</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
+                  value="option" />
+                <label class="form-check-label" for="inlineRadio3">4</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5"
+                  value="option" />
+                <label class="form-check-label" for="inlineRadio3">5</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6"
+                  value="option" />
+                <label class="form-check-label" for="inlineRadio3">6</label>
+              </div>
+            </div>
+          </div>
+          <div class="row p-2">
+            <div class="col-md-2 col-sm-12">Section</div>
+            <div class="form-group col-md-8">
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-success active">
+                  <input type="radio" name="options" id="option1" autocomplete="off" checked />Non Smoking
+                </label>
+                <label class="btn btn-danger">
+                  <input type="radio" name="options" id="option2" autocomplete="off" />
+                  Smoking
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row p-2">
+              <p class="col-sm-12 col-md-2">Date and Time</p>
+              <div class="col-sm-12 col-md-3">
+                <input type="text" class="form-control" placeholder="Date" />
+              </div>
+              <div class="col-sm-12 col-md-3">
+                <input type="text" class="form-control" placeholder="Time" />
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row p-2">
+              <div class="col offset-md-2">
+                <button type="button" class="btn btn-secondary">
+                  <a role="button" data-toggle="modal" data-dismiss="modal">
+                    Cancel
+                  </a>
+                </button>
+                <button type="button" class="btn btn-primary">Resever</button>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
   <div class="container">
     <div class="row row-content">
       <div class="col">
@@ -419,24 +419,7 @@
       $('[data-toggle="tooltip"]').tooltip();
     });
   </script>
-  <script>
-    $(document).ready(function () {
-      $("#mycarousel").carousel({ interval: 2000 });
-      $("#carouselButton").click(function () {
-        if ($("#carouselButton").children("button").children("span").hasClass('fa-pause')) {
-          $("#mycarousel").carousel('pause');
-          $("#carouselButton").children("button").children("span").removeClass('fa-pause');
-          $("#carouselButton").children("button").children("span").addClass('fa-play');
-        }
-        else if ($("#carouselButton").children("button").children("span").hasClass('fa-play')) {
-          $("#mycarousel").carousel('cycle');
-          $("#carouselButton").children("button").children("span").removeClass('fa-play');
-          $("#carouselButton").children("button").children("span").addClass('fa-pause');
-        }
-      });
-    });
-  </script>
-
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
