--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <!-- Bootstrap CSS -->
-      <!-- build:css css/main.css -->
+  <!-- build:css css/main.css -->
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
@@ -41,7 +41,7 @@
               Contact</a></li>
         </ul>
         <span class="navbar-text">
-          <a data-toggle="modal" data-target="#loginModal">
+          <a id="loginBtn">
             <span class="fa fa-sign-in"></span> Login</a>
         </span>
       </div>
@@ -100,10 +100,9 @@
           <img src="img/logo.png" class="img-fluid">
         </div>
         <div class=" col-12 col-sm-3 align-self-center">
-          <a role="button" class="btn btn-block nav-link btn-warning" data-target="#reserveTable" data-toggle="modal"
-            data-hover="toolflip" data-placement="" html="true" title="Or Call us at +852 12345678"
-            data-placement="bottom" href="#reserveform">Reserve
-            Table</a>
+          <button type="button" class="btn btn-block nav-link btn-warning" html="true"
+            title="Or Call us at +852 12345678" id="reserve">Reserve
+            Table</button>
         </div>
 
   </header>
@@ -112,7 +111,7 @@
     <div class="modal-dialog modal-lg" role="content">
       <div class="row justify-content-center">
         <form class="modal-content border rounded" style="overflow: hidden">
-          <div class="bg-white border-bottom d-flex">
+          <div class="border-bottom d-flex modal-header">
             <h3 class="p-2">Reserver a Table</h3>
             <div class="d-inline-block p-2 ml-auto">
               <a role="button" class="btn" data-toggle="modal" data-target="#reserveform">
@@ -120,81 +119,83 @@
               </a>
             </div>
           </div>
-          <div class="row p-2">
-            <div class="col-md-2 col-sm-12">Number of Guest</div>
-            <div class="form-group col-md-8">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                  value="option" />
-                <label class="form-check-label" for="inlineRadio3">1</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                  value="option" />
-                <label class="form-check-label" for="inlineRadio3">2</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
-                  value="option" />
-                <label class="form-check-label" for="inlineRadio3">3</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
-                  value="option" />
-                <label class="form-check-label" for="inlineRadio3">4</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5"
-                  value="option" />
-                <label class="form-check-label" for="inlineRadio3">5</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6"
-                  value="option" />
-                <label class="form-check-label" for="inlineRadio3">6</label>
-              </div>
-            </div>
-          </div>
-          <div class="row p-2">
-            <div class="col-md-2 col-sm-12">Section</div>
-            <div class="form-group col-md-8">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-success active">
-                  <input type="radio" name="options" id="option1" autocomplete="off" checked />Non Smoking
-                </label>
-                <label class="btn btn-danger">
-                  <input type="radio" name="options" id="option2" autocomplete="off" />
-                  Smoking
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
+          <div class="modal-body">
             <div class="row p-2">
-              <p class="col-sm-12 col-md-2">Date and Time</p>
-              <div class="col-sm-12 col-md-3">
-                <input type="text" class="form-control" placeholder="Date" />
-              </div>
-              <div class="col-sm-12 col-md-3">
-                <input type="text" class="form-control" placeholder="Time" />
+              <div class="col-md-2 col-sm-12">Number of Guest</div>
+              <div class="form-group col-md-8">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                    value="option" />
+                  <label class="form-check-label" for="inlineRadio3">1</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                    value="option" />
+                  <label class="form-check-label" for="inlineRadio3">2</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                    value="option" />
+                  <label class="form-check-label" for="inlineRadio3">3</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
+                    value="option" />
+                  <label class="form-check-label" for="inlineRadio3">4</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5"
+                    value="option" />
+                  <label class="form-check-label" for="inlineRadio3">5</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6"
+                    value="option" />
+                  <label class="form-check-label" for="inlineRadio3">6</label>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="form-group">
             <div class="row p-2">
-              <div class="col offset-md-2">
-                <button type="button" class="btn btn-secondary">
-                  <a role="button" data-toggle="modal" data-dismiss="modal">
-                    Cancel
-                  </a>
-                </button>
-                <button type="button" class="btn btn-primary">Resever</button>
+              <div class="col-md-2 col-sm-12">Section</div>
+              <div class="form-group col-md-8">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-success active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked />Non Smoking
+                  </label>
+                  <label class="btn btn-danger">
+                    <input type="radio" name="options" id="option2" autocomplete="off" />
+                    Smoking
+                  </label>
+                </div>
               </div>
             </div>
-          </div>
+            <div class="form-group">
+              <div class="row p-2">
+                <p class="col-sm-12 col-md-2">Date and Time</p>
+                <div class="col-sm-12 col-md-3">
+                  <input type="text" class="form-control" placeholder="Date" />
+                </div>
+                <div class="col-sm-12 col-md-3">
+                  <input type="text" class="form-control" placeholder="Time" />
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="row p-2">
+                <div class="col offset-md-2">
+                  <button type="button" class="btn btn-secondary">
+                    <a role="button" data-toggle="modal" data-dismiss="modal">
+                      Cancel
+                    </a>
+                  </button>
+                  <button type="button" class="btn btn-primary">Resever</button>
+                </div>
+              </div>
+            </div>
         </form>
       </div>
     </div>
+  </div>
   </div>
   <div class="container">
     <div class="row row-content">
@@ -412,12 +413,12 @@
       </div>
     </div>
   </footer>
-       <!-- build:js js/main.js -->
-       <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-       <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-       <script src="js/scripts.js"></script>
-       <!-- endbuild -->
+  <!-- build:js js/main.js -->
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="js/scripts.js"></script>
+  <!-- endbuild -->
 </body>
 
 </html>
